// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. paragraph 1`] = `
<View>
  <View>
    <Text
      selectable={true}
    >
      <Text
        selectable={true}
      >
        This being Black History Month, last week was Politicians In Search Of An Eye-Catching Race-Related Policy Week.
      </Text>
    </Text>
  </View>
</View>
`;

exports[`2. empty paragraph 1`] = `null`;

exports[`3. paragraph with a drop cap 1`] = `
<View>
  <View>
    <Text
      selectable={true}
    >
      <Text
        selectable={true}
      >
        his being Black History Month, last week was Politicians In Search Of An Eye-Catching Race-Related Policy Week.
      </Text>
    </Text>
  </View>
</View>
`;

exports[`4. paragraph with a short text and a drop cap 1`] = `
<View>
  <View>
    <Text
      selectable={true}
    >
      <Text
        selectable={true}
      >
        his being Black History
      </Text>
    </Text>
  </View>
</View>
`;
